--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<body>
 		<h1>Minha Pagina Html</h1>
-		<p>Teste aula</p>>
+		<p>Teste aula</p>
+		<span>Teste span</span>
 	</body>
 </html>
